// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`presetValidator config fails as array 1`] = `
[Error: {
  "config" [31m[1][0m: []
}
[31m
[1] "config" must be an object[0m]
`;

exports[`presetValidator fails no options - del 1`] = `
[Error: {
  "clean": [
    {
      "del": [
        "" [31m[1][0m
      ]
    }
  ]
}
[31m
[1] "0" is not allowed to be empty[0m]
`;

exports[`presetValidator fails no options - makeDirs 1`] = `
[Error: {
  "clean": [
    {
      "makeDirs": [
        "" [31m[1][0m
      ]
    }
  ]
}
[31m
[1] "0" is not allowed to be empty[0m]
`;

exports[`presetValidator fails with unknown key 1`] = `
[Error: {
  "clean": [
    {
      "del": [
        "*"
      ],
      "makeDirs": [
        "dir"
      ],
      "excess" [31m[1][0m: "something"
    }
  ]
}
[31m
[1] "excess" is not allowed[0m]
`;

exports[`presetValidator preset validates custom lifecycles 1`] = `
[Error: {
  "invalid1" [31m[1][0m: "2017-12-05T18:02:11.869Z"
}
[31m
[1] single value of "invalid1" does not match any of the allowed types[0m]
`;
